force-app/main/default/objects/DealUser__c/DealUser__c.object-meta.xml
<CustomObject>
    <description>Contains all the user ids and passwords of users for deals site</description>
    <label>DealUser</label>
    <nameField>
        <displayFormat>DU-{00000}</displayFormat>
        <label>UID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DealUsers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>