force-app/main/default/objects/DealUser__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If it was unchecked, User cannot login.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>